openmrs/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: openmrs
  name: openmrs
  namespace: openmrs
spec:
  replicas: 2
  selector:
    matchLabels:
      app: openmrs
  strategy: {}
  template:
    metadata:
      labels:
        app: openmrs
    spec:
      containers:
      - image: veerendradevops/openmrs:2.1.2
        name: open
        ports:
        - containerPort: 8080
      #   volumeMounts:
      #     - name: persistent-storage
      #       mountPath: /opt
      # volumes:
      #   - name: persistent-storage
      #     persistentVolumeClaim:
      #       claimName: efs-claim-sandbox
