openmrs/service.yml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: openmrs
  name: openmrs
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: openmrs
  type: LoadBalancer
status:
  loadBalancer: {}
