openmrs/ingress_with_acm.yml
###Note: Make sure you need to install ingress controller using below link
### https://docs.aws.amazon.com/eks/latest/userguide/aws-load-balancer-controller.html

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: "openmrs"
  namespace: "openmrs"
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: instance
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}, {"HTTP":80}]'
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:178005052210:certificate/8eef856c-4cfc-4e28-aa8c-09e344b44074
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP
    alb.ingress.kubernetes.io/healthcheck-port: traffic-port
    alb.ingress.kubernetes.io/healthcheck-path: /
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: '15'
    alb.ingress.kubernetes.io/healthcheck-timeout-seconds: '5'
    alb.ingress.kubernetes.io/success-codes: '200'
    alb.ingress.kubernetes.io/healthy-threshold-count: '2'
    alb.ingress.kubernetes.io/unhealthy-threshold-count: '2'
    alb.ingress.kubernetes.io/tags: Name=openmrs-ingress
  # labels:
  #   app: openmrs
spec:
  tls:
    - hosts: 
       - www.veerendratholeti.tk
  rules:
  - host: "www.veerendratholeti.tk"
    http:
      paths:
        - backend:
            service: 
              name: openmrs
              port: 
                number: 8080
          pathType: ImplementationSpecific
